- Changed submodules naming (capitalized names and splitted some modules).
- Added pluggining system.
- Made GET|POST|SERVER|COOKIE read-only.
- Blocked __builtins__ access for user script. Accessing it is still aviable for plugins. 
- Session Plugin and data.SESSION var (read-only).
- Templating system became a plugin.
- Improved Cookie system.
- Logger Added.
- Response class.
- Very better Conf class.
- Url Parsing added.
- Database module has gone: use a plugin instead.
- Draft for mongodb plugin.
- Sandboxing now avaible.
- File limits now use shell-like wildcards, no more "magic" regex.
- sys.stdout not used now.
- A more flexible plugin syntax.
- Useless class attribute deleted.
- Can output different files with correct content-type.
- Template subplugins finally working (var, loop, include).
- Low-level write plugin added in Template.
- getvar and isset added.
- Header checking for IE and browsers which does not support xhtml.
- A more "lazy" code and minor optimization.